# NotAnEngine

Renderer/: .gitignore  CMake.bat  CMakeCache.txt  CMakeLists.txt  NotAnEngine.sln  Renderer.sln  premake5.lua
Renderer/NotAnEngine/: NotAnEngine.sln  NotAnEngine.vcxproj  NotAnEngine.vcxproj.filters
Renderer/NotAnEngine/src/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Lights.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshGroup.cpp  MeshGroup.h  MeshRenderer.h  NotAnEngineCore.cpp  NotAnEngineCore.h  Primitives.cpp  Primitives.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Uniform.cpp  Uniform.h  UniformBuffer.cpp  UniformBuffer.h  Vertex.h  Window.cpp  Window.h  main.cpp
Renderer/NotAnEngine/src/Events/: ButtonPressEvent.h  ButtonReleaseEvent.h  ButtonRepeatEvent.h  Event.h  EventDispatcher.h  MouseMovedEvent.h  MousePressEvent.h  MouseReleaseEvent.h  WindowResizeEvent.h
Renderer/NotAnEngine/src/Physics/: PhysicsEngine.cpp  PhysicsEngine.h
Renderer/NotAnEngine/working/Shaders/: 2d_frag.glsl  2d_primitive_frag.glsl  2d_primitive_vertex.glsl  lit_frag.glsl  lit_vertex.glsl  (+1 more)
Renderer/Renderer/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshGroup.cpp  MeshGroup.h  OBJMesh.cpp  OBJMesh.h  Primitives.h  Renderer.vcxproj  Renderer.vcxproj.filters  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Uniform.h  camera.cpp  camera.h  main.cpp  source.cpp  vertex.cpp  vertex.h
Renderer/Shaders/: lit_frag.glsl  lit_vertex.glsl  simple_frag.glsl  simple_vertex.glsl
Renderer/working/Shaders/: lit_frag.glsl  lit_vertex.glsl  simple_vertex.glsl
(+18 files in other folders)
